--- a/frontend/ibk-manager/package.json
+++ b/frontend/ibk-manager/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.27.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "next": "15.1.7",
     "react": "^19.0.0",
