--- a/backend/ibk-manager-back/.env
+++ b/backend/ibk-manager-back/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://ibk-manager:fingerai2024!@localhost/ibk_db 
+DATABASE_URL=postgresql://ibk-manager:fingerai2024!@postgres_postgresql-master_1/ibk_db 
