--- a/backend/ibk-manager-back/docker-compose.yml
+++ b/backend/ibk-manager-back/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - DB_PASSWORD=fingerai2024!
       - DB_PORT=5432
       - NODE_ENV=production
-      - DATABASE_URL=postgresql://ibk-manager:fingerai2024!@localhost/ibk_db
+      - DATABASE_URL=postgresql://ibk-manager:fingerai2024!@postgres_postgresql-master_1/ibk_db
 
 networks:
   ibk-network:
