--- a/backend/ibk-manager-back/docker-compose.yml
+++ b/backend/ibk-manager-back/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   ibk-manager-backendi:
     container_name: ibk-manager-backend
-    image: ibk-manager-backend:latest  # 직접 빌드한 이미지 사용
+    image: ibk-manager-backend:v1  # 직접 빌드한 이미지 사용
     ports:
-      - "3005:3005"
+      - "3001:3001"
     networks:
       - ibk-network
     environment:
-      - PORT=3005
+      - PORT=3001
       - DB_HOST=postgres_postgresql-master_1
       - DB_NAME=ibk_db
       - DB_USER=ibk-manager
